Updated index.html with new content

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
-                                    <h1 class="display-3 text-white animated slideInDown mb-4">Find The Best Startup Job That Fit You</h1>
+                                    <h1 class="display-3 text-white animated slideInDown mb-4">Start Small. Think Big. Join a Startup That Gets You.</h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Connecting You to the Careers That Make a Real Difference.</p>
                                     <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Search A Job</a>
                                     <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Find A Talent</a>
@@ -119,22 +119,7 @@
 
 
         <!-- Search Start -->
-        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-            <div class="container">
-                <div class="row g-2">
-                    <div class="col-md-10">
-                        <div class="row g-2">
-                            <div class="col-md-12">
-                                <input type="text" id="keywordInput" class="form-control border-0" placeholder="Search job roles (e.g., Python, Data Analyst)" />
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <button id="searchBtn" class="btn btn-dark border-0 w-100">Search</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
         <!-- Search End -->
 
         <!-- Job Results Section -->
@@ -525,45 +510,45 @@
                 <div class="owl-carousel testimonial-carousel">
                     <div class="testimonial-item bg-light rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>" I landed my first internship through this platform in just 10 days. The job suggestions were spot on!”</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">Ritika M</h5>
+                                <small>Computer Science Student</small>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>“The resume tips section helped me polish my CV. I started getting more interview calls almost immediately.”</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">Arjun T</h5>
+                                <small> Final-Year Engineering Student</small>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>“This site made job hunting simple. The real-time listings saved me hours of scrolling through other portals.”</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-3.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">Karun V</h5>
+                                <small>BCA student</small>
                             </div>
                         </div>
                     </div>
                     <div class="testimonial-item bg-light rounded p-4">
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                        <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                        <p>"I was struggling to find openings relevant to my skills. This platform filtered exactly what I needed.”</p>
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-4.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Client Name</h5>
-                                <small>Profession</small>
+                                <h5 class="mb-1">Sneha K</h5>
+                                <small>Recent Graduate</small>
                             </div>
                         </div>
                     </div>
