--- a/src/404.html
+++ b/src/404.html
@@ -83,7 +83,7 @@
                 <h1 class="display-3 text-white mb-3 animated slideInDown">404 Error</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb text-uppercase">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Pages</a></li>
                         <li class="breadcrumb-item text-white active" aria-current="page">404 Error</li>
                     </ol>
