--- a/src/testimonial.html
+++ b/src/testimonial.html
@@ -62,8 +62,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Jobs</a>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="job-list.html" class="dropdown-item">Job List</a>
-                            <a href="job-detail.html" class="dropdown-item">Job Detail</a>
+                            <a href="http://127.0.0.1:5000/" class="dropdown-item">Job List</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -75,7 +74,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Post A Job<i class="fa fa-arrow-right ms-3"></i></a>
+                <a href="./more.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Explore More!!<i class="fa fa-arrow-right ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
@@ -107,7 +106,7 @@
                 <div class="blog-card">
                     <h4>1. How to Craft a Winning Resume</h4>
                     <p>Learn the key elements of a strong resume that stands out to recruiters and beats ATS systems...</p>
-                    <a href="blog1.html">Read More &raquo;</a>
+                    <a href="./blog/blog1.html">Read More &raquo;</a>
                 </div>
             </div>
 
@@ -115,7 +114,7 @@
                 <div class="blog-card">
                     <h4>2. Mastering Interview Etiquette</h4>
                     <p>From punctuality to post-interview follow-ups — discover what makes a lasting impression in interviews.</p>
-                    <a href="blog2.html">Read More &raquo;</a>
+                    <a href="./blog/blog2.html">Read More &raquo;</a>
                 </div>
             </div>
 
@@ -123,7 +122,7 @@
                 <div class="blog-card">
                     <h4>3. LinkedIn Profile Optimization</h4>
                     <p>Boost your visibility to recruiters by crafting a professional and compelling LinkedIn presence.</p>
-                    <a href="blog3.html">Read More &raquo;</a>
+                    <a href="./blog/blog3.html">Read More &raquo;</a>
                 </div>
             </div>
 
@@ -131,7 +130,7 @@
                 <div class="blog-card">
                     <h4>4. Top 10 Skills Employers Look For</h4>
                     <p>Explore both technical and soft skills that are trending across industries in 2025.</p>
-                    <a href="blog4.html">Read More &raquo;</a>
+                    <a href="./blog/blog4.html">Read More &raquo;</a>
                 </div>
             </div>
 
@@ -139,7 +138,7 @@
                 <div class="blog-card">
                     <h4>5. Building an Impressive Project Portfolio</h4>
                     <p>Whether you're a fresher or experienced, show off your real-world skills through effective project showcases.</p>
-                    <a href="blog5.html">Read More &raquo;</a>
+                    <a href="./blog/blog5.html">Read More &raquo;</a>
                 </div>
             </div>
 
@@ -147,7 +146,7 @@
                 <div class="blog-card">
                     <h4>6. Career Planning for Students</h4>
                     <p>Discover how early planning, internships, and goal setting can shape your career success path.</p>
-                    <a href="blog6.html">Read More &raquo;</a>
+                    <a href="./blog/blog6.html">Read More &raquo;</a>
                 </div>
             </div>
 
